Revert "fixes mailing-list-form on mobile"
This reverts commit 2838f03ebe2b48e3e4ec67de184b91fb29589819.

--- a/app/javascript/stylesheets/hitobito/_form.scss
+++ b/app/javascript/stylesheets/hitobito/_form.scss
@@ -457,18 +457,6 @@ li.form {
   }
 }
 
-@media screen and (max-width: 768px) {
-.input-append-fix{
-  .input-append{
-    white-space: normal;
-    width:calc(100vw - 230px);
-    input{
-      width:60%;
-    }
-  }
-}
-}
-
 
 input.switcher {
   max-height: 0;
